@@ -3058,9 +3058,10 @@ function geodir_detail_page_custom_field_tab($tabs_arr)
                                             // If the uploaded file is image
                                             if (in_array($uploaded_file_type, $image_file_types)) {
                                                 $file_paths .= '<div class="geodir-custom-post-gallery" class="clearfix">';
-                                                $file_paths .= geodir_show_image(array('src' => $file), 'thumbnail', false, false);
-                                                //$file_paths .= '<img src="'.$file.'"  />';
-                                                $file_paths .= '</div>';
+												$file_paths .= '<a href="'.$file.'">';
+												$file_paths .= geodir_show_image(array('src' => $file), 'thumbnail', false, false);
+												$file_paths .= '</a>';
+												$file_paths .= '</div>';
                                             } else {
                                                $ext_path = '_' . $html_var . '_';
                                                $filename = explode($ext_path, $filename);
