@@ -7,6 +7,7 @@ Share this links to details pages can sometimes cause JS error from jQuery histo
 WPML, other translation links on details pages can be broken when viewing on non default language - FIXED
 Filter added to change recent reviews excerpt length - ADDED
 Details table limiting city,region,country names to 30 char, some region names are longer, changed to 50 char - FIXED
+Image file for custom field not enlarging using modal if displayed as tab on detail page - FIXED
 
 v1.5.1
 Default sort by titles not translatable - FIXED
